privacy button fix

--- a/index.html
+++ b/index.html
@@ -229,13 +229,12 @@
 
   <!-- ===== Modal: Privacy Policy ===== -->
   <div id="privacyModal" class="modal-backdrop" role="dialog" aria-modal="true" aria-labelledby="privacyTitle">
-    <div class="modal-card" role="document" style="grid-template-columns:1fr">
-      <button class="close-btn" aria-label="Close privacy" id="closePrivacyBtn">✕</button>
+    <div class="modal-card">
       <div>
         <h2 id="privacyTitle">Privacy Policy — Summary</h2>
         <p class="muted">Straynon is local-first. Default data storage is local only. App includes SMTP credentials used purely for OTP delivery when a user requests password reset.</p>
         <div style="margin-top:12px;display:flex;gap:8px">
-          <button class="btn-secondary" id="closePrivacyBtn2">Close</button>
+          <button class="btn-secondary" id="closePrivacyBtn">Close</button>
         </div>
       </div>
     </div>
