update download link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <aside class="cta-area">
-          <a class="btn-primary" id="download" href="https://github.com/anshukumari01/Straynon/releases/download/Straynon/StraynonInstaller.exe" download>
+          <a class="btn-primary" id="download" href="https://github.com/anshukumari01/Straynon/releases/download/v1.1/StraynonInstaller.exe" download>
             ⤓ Download STRAYNON
           </a>
 
