--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <aside class="cta-area">
-          <a class="btn-primary" id="download" href="https://github.com/anshukumari01/Straynon/releases/download/v1.1/StraynonInstaller.exe" download>
+          <a class="btn-primary" id="download" href="https://github.com/anshukumari01/Straynon/releases/download/v1.2/StraynonInstaller.exe" download>
             ⤓ Download STRAYNON
           </a>
 
@@ -157,7 +157,7 @@
     </main>
 
     <footer class="footer">
-      <div>© STRAYNON</div>
+      <div>© STRAYNON - 2025</div>
       <div class="footer-links">
         <a class="nav-link" href="#howto">How to install</a>
         <a class="nav-link" href="#faq">FAQ</a>
